add endpoind get product Male and Female
