# router/router.go
@@ -12,9 +12,11 @@ func InitRouter(e *echo.Echo, product controller.ProductController, category con
 
 	e.Use(middlewares.CorsMiddlewares)
 	e.GET("/swagger/*", echoSwagger.WrapHandler)
-	e.GET("/product", product.GetAllProduct)
-	e.POST("/product/input", product.InputProduct)
 	e.GET("/category", category.GetAllCategory)
-	e.POST("/category/input", category.InputCategory)
+	e.POST("/category", category.InputCategory)
+	e.GET("/product", product.GetAllProduct)
+	e.POST("/product", product.InputProduct)
+	e.GET("/product/male", product.GetAllMale)
+	e.GET("/Product/female", product.GetAllFemale)
 
 }
